fixed header spacing, added border-radius mixin

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+div,
+section,
+article {
+  border-radius: 4px;
+}
 nav.top-nav {
   display: flex;
   flex-direction: row;
@@ -175,14 +180,9 @@ nav.top-nav {
   align-items: center;
   background-color: #006e90;
   width: 100%;
-  margin: 0 0 2% 0;
+  margin: 0;
   height: 68px;
   padding: 4%;
-}
-@media (min-width: 800px) {
-  nav.top-nav {
-    margin-bottom: 0;
-  }
 }
 .logo-container {
   width: 20%;
@@ -280,6 +280,7 @@ header {
   display: inline-block;
   border: 1px solid #DCDCDC;
   margin: 0;
+  padding: 2%;
   -webkit-box-shadow: 5px 5px 14px -8px #000000;
   box-shadow: 5px 5px 14px -8px #000000;
 }
@@ -305,13 +306,11 @@ header {
   }
 }
 article.content-card {
+  text-align: center;
   width: 100%;
   margin: auto;
 }
 @media (min-width: 500px) {
-  article.content-card {
-    text-align: center;
-  }
   article.content-card h2 {
     margin: 4% 0;
   }
@@ -334,11 +333,11 @@ article.content-card {
   width: 100%;
   padding: 4%;
   margin-bottom: 4%;
+  text-align: center;
 }
 @media (min-width: 800px) {
   .content-testimonials {
     padding: 2%;
-    text-align: center;
     margin-bottom: 0;
   }
 }
@@ -382,6 +381,7 @@ article.content-card {
 }
 /******Buttons*********/
 .btn-cta {
+  border-radius: 4px;
   display: block;
   padding: 12px;
   border: none;
@@ -402,5 +402,20 @@ article.content-card {
 @media (min-width: 800px) {
   .btn-cta a {
     font-size: 2.2rem;
+  }
+}
+.middle-cta-container .btn-cta.middle-content {
+  width: 100%;
+}
+@media (min-width: 800px) {
+  .middle-cta-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .middle-cta-container .btn-cta.middle-content {
+    width: 40%;
+    margin: 2%;
   }
 }
