--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,6 +59,7 @@ header {
   display: inline-block;
   .border;
   margin:0;
+  padding: 2%;
   .box-shadow;
 
   .content-card-img-container{
@@ -82,11 +83,12 @@ header {
 
 
 article.content-card{
+  text-align: center;
   width: 100%;
   margin: auto;
   @media @phone{
       
-    text-align: center;
+   
     h2{
       margin: 4% 0;
     }
@@ -107,11 +109,11 @@ article.content-card{
   width:100%;
   padding: 4%;
   margin-bottom: 4%;
+  text-align: center;
 
 
   @media @tablet{
     padding: 2%;
-    text-align: center;
     margin-bottom: 0;
   }
 }
@@ -175,7 +177,23 @@ article.content-card{
    }
  }
 
+ .middle-cta-container{
+  
+  .btn-cta.middle-content{
+    width:100%;
+  }
+  @media @tablet{
+    .display-flex(row, space-evenly,center);
+    .btn-cta.middle-content{
+      width: 40%;
+      margin: 2%;
+    }
+  }
+  
+   
+ }
 
+ 
  
 
 
