--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,6 +7,10 @@
     border-bottom: px solid @bordergrey;
  }
 
+ .border-radius(){
+     border-radius:4px;
+ }
+
  .box-shadow(){
     -webkit-box-shadow: 5px 5px 14px -8px #000000; 
     box-shadow: 5px 5px 14px -8px #000000;
@@ -20,6 +24,7 @@
  }
  
  .cta-btn(@bg-color:@accent2, @width:48%, @height:60px,@font-color:@white){
+     .border-radius;
      display: block;
      padding: 12px;
      border:none;
