--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,13 +4,11 @@ nav.top-nav{
    .display-flex(row,space-between,center);
     background-color:@primary;
    width: 100%;
-    margin: 0 0 2% 0;
+    margin: 0;
     height: 68px;
     padding: 4%;
 
-    @media @tablet{
-        margin-bottom: 0;
-    }
+   
 }
 
 .logo-container{
